# TiffUtils

./: CMakeLists.txt  TiffConverter.cpp  TiffConverter.h  mainwindow.cpp  mainwindow.h
ImageComparator/: CMakeLists.txt  mainwindow.cpp
LibTiff/: CMakeLists.txt  configure.ac  tif_aux.c  tif_bigtiff.txt  tif_compress.c  tif_config.h  tif_dir.c  tif_dir.h  tif_dirinfo.c  tif_dirread.c  tif_dirwrite.c  tif_extension.c  tif_fax3.c  tif_flush.c  tif_getimage.c  tif_jpeg.c  tif_luv.c  tif_ojpeg.c  tif_open.c  tif_packbits.c  tif_pixarlog.c  tif_print.c  tif_read.c  tif_strip.c  tif_tile.c  tif_unix.c  tif_write.c  tif_zip.c  tiff.h  tiffconf.h
LibTiff/Debug64/: LibTiff.lib
LibTiff/Release64/: LibTiff.lib
LibTiff/cmake/: LibraryFeatures.cmake
LibZip/: gzlib.c  gzread.c  gzwrite.c
LibZip/Debug64/: LibZip.lib
LibZip/Release64/: LibZip.lib
OpenCV/lib/: opencv_world4100.lib  opencv_world4100d.lib
TiffGrayscaleConverter/: CMakeLists.txt  TiffConverter.cpp  TiffConverter.h  TiffTableModel.cpp  TiffTableModel.h  main.cpp  mainwindow.cpp  mainwindow.h
TiffTagEditor/: CMakeLists.txt  TiffTagsModel.cpp  TiffTagsModel.h  mainwindow.cpp  mainwindow.h
zlib/: CMakeLists.txt
